# eflips

./: .gitignore  pyproject.toml  setup.py
eflips/: __init__.py  charging.py  compat.py  energy.py  evaluation.py  events.py  genetic.py  grid.py  helperFunctions.py  io.py  misc.py  osm.py  requirements.txt  schedule.py  scheduling.py  settings.py  settings_default.json  simpleDepot.py  simulation.py  tco.py  vehicle.py
eflips-examples/: BatchScheduleSimulation_DC.py  ChargingStationOptimisation.py  CustomSimulation_DC.py  CustomSimulation_DC_noDepot.py  CustomSimulation_OC.py  Generate_Schedules_DC.py  Generate_Schedules_OC.py  Generate_Schedules_and_Grid.py  Generate_Timetable.py  LongitudinalDynamicsSimulation.py  ScheduleSimulation_DC.py  ScheduleSimulation_OC.py  TCO_Analysis_DC.py  sort1.csv  sort2.csv
eflips/docs/: batch_simulation.rst  conf.py  custom_simulation.rst  developer_guide.rst  getting_started.rst  gitignore_template.rst  global_constants.rst  index.rst  installation.rst  introduction.rst  schedule_simulation.rst  tco_calculation.rst
eflips/driving_cycles/: sort3.csv
eflips/examples/: CustomSimulation_DC.py  Generate_Schedules_and_Grid.py  ScheduleSimulation_OC.py  weather_data.csv
